XMLExper/m12/m12_47_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:745:115: error: lvalue required as left operand of assignment
  745 |         /*PCI*/dynamic_cast<tinyxml2::XMLUnknown*>(returnNode) = CreateUnlinkedNode<XMLDeclaration>( _commentPool );
      |                                                                                                                   ^
diff: tinyxml2.S: No such file or directory
